# seti

./: Cargo.toml
src/: main.rs
