[package]
name = "seti"
version = "0.1.0"
authors = ["Lei Wu <Lei.Wu@west.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
reqwest = { version = "0.10.10", features = ["blocking"] }
chrono = "0.4"
